--- a/src/edu/asu/heal/core/api/dao/dao.properties
+++ b/src/edu/asu/heal/core/api/dao/dao.properties
@@ -3,8 +3,8 @@ dao.class=edu.asu.heal.core.api.dao.impl.MongoDBDAO
 
 # This next section contains properties which the Mongo database needs
 
-mongo.uri=mongodb://localhost:27017/healdb
-mongo.dbname=healdb
+mongo.uri=mongodb://localhost:27017/healdb2
+mongo.dbname=healdb2
 
 #Alternatively, the following could be used as broken down
 #mongo.host=localhost
